--- a/Share Beauty App/Views/ProductDetailTransitionView.xib
+++ b/Share Beauty App/Views/ProductDetailTransitionView.xib
@@ -105,15 +105,15 @@
             <rect key="frame" x="0.0" y="0.0" width="687" height="171"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UPy-Re-QY1" userLabel="CenterView">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UPy-Re-QY1" userLabel="CenterView" customClass="TouchTransmissionView" customModule="Share_Beauty_App" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="687" height="171"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W9e-j9-Yxq" userLabel="RightView">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W9e-j9-Yxq" userLabel="RightView" customClass="TouchTransmissionView" customModule="Share_Beauty_App" customModuleProvider="target">
                     <rect key="frame" x="351" y="0.0" width="336" height="171"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="haQ-ef-Nrn" userLabel="LeftView">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="haQ-ef-Nrn" userLabel="LeftView" customClass="TouchTransmissionView" customModule="Share_Beauty_App" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="336" height="171"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
