#2494 about Shiseido Brand https://redmine.aquadc.suika.bar/issues/2494

--- a/Share Beauty App/Views/HeaderView.xib
+++ b/Share Beauty App/Views/HeaderView.xib
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HeaderView" customModule="Share_Beauty_App" customModuleProvider="target">
             <connections>
                 <outlet property="mBtnOutApp" destination="Uaa-9l-kCZ" id="zr7-xT-Lo2"/>
+                <outlet property="mBtnShiseido" destination="N6V-K3-yhB" id="CeJ-wG-Ur4"/>
                 <outlet property="mBtnSkip" destination="UwT-h8-zFU" id="brf-hL-1ei"/>
                 <outlet property="mBtnUpdate" destination="ntz-Cn-Elz" id="xAz-01-5nD"/>
                 <outlet property="mConstraintUpdateToOutApp" destination="fxO-OK-ah6" id="DrP-GJ-pMI"/>
@@ -68,7 +69,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UwT-h8-zFU" customClass="BaseButton" customModule="Share_Beauty_App" customModuleProvider="target">
-                    <rect key="frame" x="560.5" y="14" width="46.5" height="30"/>
+                    <rect key="frame" x="512.5" y="14" width="46.5" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="UwT-h8-zFU" secondAttribute="height" multiplier="23:15" id="kvG-jP-9KU"/>
                     </constraints>
@@ -79,13 +80,22 @@
                         <action selector="onTapSkip:" destination="-1" eventType="touchUpInside" id="C4Z-Jo-bRN"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N6V-K3-yhB" customClass="BaseButton" customModule="Share_Beauty_App" customModuleProvider="target">
+                    <rect key="frame" x="569" y="14.5" width="28" height="29"/>
+                    <state key="normal" image="icon_shiseido"/>
+                    <connections>
+                        <action selector="onTapButton:" destination="-1" eventType="touchUpInside" id="c84-LJ-KCk"/>
+                        <action selector="onTapShiseido:" destination="-1" eventType="touchUpInside" id="qTZ-b4-pjt"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Y04-qN-LjA" firstAttribute="centerX" secondItem="RKT-Db-1oc" secondAttribute="centerX" id="7dW-xs-GzQ"/>
-                <constraint firstItem="ntz-Cn-Elz" firstAttribute="leading" secondItem="UwT-h8-zFU" secondAttribute="trailing" constant="10" id="Glh-cf-aAH"/>
+                <constraint firstItem="ntz-Cn-Elz" firstAttribute="leading" secondItem="N6V-K3-yhB" secondAttribute="trailing" constant="20" id="ICK-Ks-7Ar"/>
                 <constraint firstItem="Y04-qN-LjA" firstAttribute="top" secondItem="RKT-Db-1oc" secondAttribute="top" priority="750" constant="11" id="Ii7-qz-J1r"/>
                 <constraint firstItem="xW0-SQ-wNJ" firstAttribute="centerY" secondItem="RKT-Db-1oc" secondAttribute="centerY" id="LZM-dP-Jbu"/>
+                <constraint firstItem="N6V-K3-yhB" firstAttribute="centerY" secondItem="RKT-Db-1oc" secondAttribute="centerY" id="Q22-2q-F9k"/>
                 <constraint firstItem="Uaa-9l-kCZ" firstAttribute="centerY" secondItem="RKT-Db-1oc" secondAttribute="centerY" constant="-2" id="S7j-7b-7ab"/>
                 <constraint firstItem="ntz-Cn-Elz" firstAttribute="centerY" secondItem="RKT-Db-1oc" secondAttribute="centerY" id="ZyP-cF-UEm"/>
                 <constraint firstItem="UwT-h8-zFU" firstAttribute="centerY" secondItem="RKT-Db-1oc" secondAttribute="centerY" id="bff-0R-CN4"/>
@@ -96,6 +106,7 @@
                 <constraint firstItem="Y04-qN-LjA" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="buO-mN-OMb" secondAttribute="trailing" priority="750" constant="20" id="tXE-gk-8zj"/>
                 <constraint firstItem="buO-mN-OMb" firstAttribute="leading" secondItem="xW0-SQ-wNJ" secondAttribute="trailing" constant="20" id="wam-Xf-qhe"/>
                 <constraint firstItem="xW0-SQ-wNJ" firstAttribute="leading" secondItem="RKT-Db-1oc" secondAttribute="leading" constant="20" id="xjB-vy-h0N"/>
+                <constraint firstItem="N6V-K3-yhB" firstAttribute="leading" secondItem="UwT-h8-zFU" secondAttribute="trailing" constant="10" id="yXo-eI-LRf"/>
                 <constraint firstAttribute="bottom" secondItem="Y04-qN-LjA" secondAttribute="bottom" priority="750" constant="12" id="zdX-MK-d9A"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -109,5 +120,6 @@
         <image name="header_menu" width="20" height="17"/>
         <image name="header_option" width="23" height="22"/>
         <image name="header_shiseido" width="123" height="35"/>
+        <image name="icon_shiseido" width="28" height="29"/>
     </resources>
 </document>
