--- a/Share Beauty App/Base.lproj/NewApproachViewController.storyboard
+++ b/Share Beauty App/Base.lproj/NewApproachViewController.storyboard
@@ -167,10 +167,6 @@ Your skin</string>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fvd-Oa-hRY">
-                                        <rect key="frame" x="-103" y="-236" width="1024" height="700"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VcO-FX-U6G">
                                         <rect key="frame" x="493.5" y="50" width="325.5" height="128"/>
                                         <color key="backgroundColor" red="0.7843137255" green="0.062745098040000002" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -183,9 +179,6 @@ Your skin</string>
                                                 <integer key="value" value="30"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <action selector="onTapRegenerate:" destination="TYu-Ly-iev" eventType="touchUpInside" id="syw-a4-4hU"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w5u-yN-FNW">
                                         <rect key="frame" x="0.0" y="50" width="325.5" height="128"/>
@@ -199,10 +192,11 @@ Your skin</string>
                                                 <integer key="value" value="30"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <action selector="onTapDefend:" destination="TYu-Ly-iev" eventType="touchUpInside" id="YUk-Ha-ARn"/>
-                                        </connections>
                                     </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fvd-Oa-hRY">
+                                        <rect key="frame" x="-103" y="-236" width="1024" height="700"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -220,6 +214,20 @@ Your skin</string>
                                     <constraint firstAttribute="bottom" secondItem="es4-FR-NGW" secondAttribute="bottom" id="pnX-q6-XVc"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="41q-ek-qyl" userLabel="Regenerate">
+                                <rect key="frame" x="597" y="374" width="350" height="130"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="onTapRegenerate:" destination="TYu-Ly-iev" eventType="touchUpInside" id="yBJ-Ku-5Tx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K7y-8G-Tef" userLabel="Defend">
+                                <rect key="frame" x="68" y="374" width="350" height="130"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="onTapDefend:" destination="TYu-Ly-iev" eventType="touchUpInside" id="KNU-Pa-f3g"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
